Add translation to the name of the sections

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -8,7 +8,7 @@
   >
     <!-- TITLE -->
     <div id="section-name-container">
-      <h1 class="section-name">{{ sectionName }}</h1>
+      <h1 class="section-name" translate>{{ sectionName }}</h1>
     </div>
     <!-- /TITLE -->
     <div id="tags-outer-container" class="mat-accent-500-bg">
