Remove the `<p>` HTML tag from the body of the articles for the summaries

--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -50,7 +50,7 @@
         {{ article?.title }}
       </h4>
       <div *ngIf="isAuthorVisible" class="article-author">
-        <h5
+        <h5 *ngIf="article.createdBy"
           translate
           [translateParams]="{
             value: article?.createdBy
