Remove the html tags from the body of the articles for the summaries

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
@@ -9,7 +9,7 @@
   <div fxLayout="row" fxLayoutAlign="center center">
     <div
       [@fadeInOut]="index === current ? 'visible' : 'invisible'"
-      *ngFor="let curiosity of (curiosities$ | async); let index = index"
+      *ngFor="let curiosity of curiosities; let index = index"
     >
       <ant-article-summary
         [isMetadataVisible]="true"
