--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -7,7 +7,7 @@
       />
     </div>
     <h1 id="article-title" class="col-10">{{ article.title }}</h1>
-    <div id="article-info" class="col-4">
+    <div id="article-info" class="col-8">
       <div id="article-reading-time" class="col-12">
         <span id="article-reading-time-title " class="font-weight-700" translate>READ_TIME</span>{{ article.readingTime }}
       </div>
@@ -50,7 +50,7 @@
 
     <div id="related-articles-cards-container" class="row">
       <ant-article-summary
-        *ngFor="let article of (relatedArticles$ | async)"
+        *ngFor="let article of relatedArticles"
         [article]="article"
         class="col-xs-12 col-md-4"
       ></ant-article-summary>
