Implement the styles for tags after the user select them in the 3rd level
The basic is implemented, still have to improve it

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -146,7 +146,7 @@ $tags-container-color: #2aaae2;
     color: #ffffff !important;
     border-radius: 0 !important;
     font-size: 1rem !important;
-
+    display: none;
     .ng-value-label {
       font-size: 1em !important;
     }
