--- a/libs/shared/src/lib/scss/ant.scss
+++ b/libs/shared/src/lib/scss/ant.scss
@@ -10,6 +10,7 @@ $article-tag-bColor: #32A9E1;
     padding: 4px 5px;
     margin-right: 5px;
     color: #ffffff;
+    position: relative;
 
     img{
       height: 13px;
