--- a/libs/shared/src/lib/scss/ant.scss
+++ b/libs/shared/src/lib/scss/ant.scss
@@ -11,6 +11,7 @@ $article-tag-bColor: #32A9E1;
     margin-right: 5px;
     color: #ffffff;
     position: relative;
+    margin-top: 2px;
 
     img{
       height: 13px;
