--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -9,7 +9,7 @@
     <h1 id="article-title" class="col-10">{{ article.title }}</h1>
     <div id="article-info" class="col-8">
       <div id="article-reading-time" class="col-12">
-        <span id="article-reading-time-title " class="font-weight-700" translate>READ_TIME</span>{{ article.readingTime }}
+        <span id="article-reading-time-title " class="font-weight-700" translate>READ_TIME</span>{{ article.readingTime }} mins
       </div>
       <div id="article-writer" class="col-12 " *ngIf="article.createdBy">
         <span
