Try to fix the translation
The translation is working but only for English. The key is the same in all the langs,
but it only gets the value in English

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -67,8 +67,8 @@
   </article>
 
   <div *ngIf="!isMobile()" id="more-articles-btn-container" [ngClass]="{ 'hide-more-btn': isEndOfPage }">
-    <button class="btn" (click)="loadMoreArticles()" translate="">
-      SEE_MORE
+    <button class="btn" (click)="loadMoreArticles()">
+      <span translate> SEE_MORE</span>
     </button>
   </div>
 
