--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -6,7 +6,7 @@
         alt="{{articleMainPicture.seoFileName}}"
       />
     </div>
-    <h1 id="article-title" class="col-10">{{ article.title }}</h1>
+    <h1 id="article-title" class="col-12">{{ article.title }}</h1>
     <div id="article-info" class="col-8">
       <div id="article-reading-time" class="col-12">
         <span id="article-reading-time-title " class="font-weight-700" translate>READ_TIME</span>{{ article.readingTime }} mins
@@ -26,7 +26,7 @@
   <section
     id="article-body"
     [innerHtml]="article.body"
-    class="col-12 col-sm-11"
+    class="col-12"
   ></section>
 
   <!--
