Move outstanding experiences component to Shared module

--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
@@ -25,6 +25,7 @@
   </div>
 
   <a
+    *ngIf="isViewMoreVisible"
     translate
     class="see-more-section"
     [routerLink]="'/section/experiencias'"
