Add protection for empty articles in mobile and  add experiences to 2nd

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -1,6 +1,11 @@
 <div fxLayout="column" fxLayoutAlign="start start" class="second-level">
   <!-- HEADER -->
-  <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+  <div
+    id="secondary-header"
+    fxLayout="row wrap"
+    fxLayout.sm="column"
+    fxLayout.xs="column"
+  >
     <!-- TITLE -->
     <div id="section-name-container">
       <h1 class="section-name" translate>{{ sectionName }}</h1>
@@ -10,9 +15,18 @@
       <h3 translate id="tags-title">TAG_SELECTOR</h3>
       <!-- TODO: translate this -->
       <div style="width: 100%">
-        <ng-select class="custom" [items]="globalTags$ | async" [hideSelected]="true" bindLabel="name" [closeOnSelect]="false"
-          [multiple]="true" bindValue="id" [searchFn]="tagSelectFilter" (change)="tagSelectionChanged($event)"
-          [(ngModel)]="selectedItems"></ng-select>
+        <ng-select
+          class="custom"
+          [items]="globalTags$ | async"
+          [hideSelected]="true"
+          bindLabel="name"
+          [closeOnSelect]="false"
+          [multiple]="true"
+          bindValue="id"
+          [searchFn]="tagSelectFilter"
+          (change)="tagSelectionChanged($event)"
+          [(ngModel)]="selectedItems"
+        ></ng-select>
       </div>
     </div>
   </div>
@@ -20,11 +34,17 @@
 
   <div id="tags-container" [innerHtml]="tagsData"></div>
 
-
   <article fxFlexFill>
     <!-- MAIN ARTICLE -->
-    <section class="main-article-summary-container" *ngIf="mostImportantArticle; else: noItemsTemplate">
-      <ant-article-summary [isCuriosityHomeArticle]="!isMobile()" [article]="mostImportantArticle" [isCardShadowMode]="false"></ant-article-summary>
+    <section
+      class="main-article-summary-container"
+      *ngIf="mostImportantArticle; else: noItemsTemplate"
+    >
+      <ant-article-summary
+        [isCuriosityHomeArticle]="!isMobile()"
+        [article]="mostImportantArticle"
+        [isCardShadowMode]="false"
+      ></ant-article-summary>
     </section>
     <!-- / MAIN ARTICLE -->
 
@@ -33,46 +53,83 @@
     </ng-template>
 
     <!-- MARKETING -->
-    <section id="marketing-container" class="col-12" *ngIf="marketingImages && marketingImages.length > 0">
-      <slideshow [minHeight]="'300px'" [autoPlay]="true" [imageUrls]="imageUrls" [lazyLoad]="imageUrls?.length > 1"
-        [autoPlayWaitForLazyLoad]="true" [showDots]="true" [dotColor]="'#32a9e1'" [showCaptions]="false" [showArrows]="false">
+    <section
+      id="marketing-container"
+      class="col-12"
+      *ngIf="marketingImages && marketingImages.length > 0"
+    >
+      <slideshow
+        [minHeight]="'300px'"
+        [autoPlay]="true"
+        [imageUrls]="imageUrls"
+        [lazyLoad]="imageUrls?.length > 1"
+        [autoPlayWaitForLazyLoad]="true"
+        [showDots]="true"
+        [dotColor]="'#32a9e1'"
+        [showCaptions]="false"
+        [showArrows]="false"
+      >
       </slideshow>
     </section>
     <!-- / MARKETING -->
 
     <!-- SECOND MOST IMPORTANT -->
-    <section class="second-most-important" fxLayout="row" *ngIf="
+    <section
+      class="second-most-important"
+      fxLayout="row"
+      *ngIf="
         !isMobile() &&
         mostImportantArticle &&
         secondMostImportantArticles?.length > 0
-      ">
-      <ant-article-summary *ngFor="let article of secondMostImportantArticles" [article]="article"
-        [isCreationDateVisible]="false" class="col-md-6 col-xs-12"></ant-article-summary>
+      "
+    >
+      <ant-article-summary
+        *ngFor="let article of secondMostImportantArticles"
+        [article]="article"
+        [isCreationDateVisible]="false"
+        class="col-md-6 col-xs-12"
+      ></ant-article-summary>
     </section>
     <!-- / SECOND MOST IMPORTANT -->
 
     <!-- EXTRA ARTICLES -->
-    <section class="extra-articles" fxLayout="row wrap" *ngIf="
+    <section
+      class="extra-articles"
+      fxLayout="row wrap"
+      *ngIf="
         !isMobile() && mostImportantArticle && articlesToRender?.length > 0
-      ">
-      <ant-article-summary *ngFor="let article of articlesToRender" [article]="article" [isCreationDateVisible]="false"
-        class="col-md-3 col-sm-4 col-xs-12"></ant-article-summary>
+      "
+    >
+      <ant-article-summary
+        *ngFor="let article of articlesToRender"
+        [article]="article"
+        [isCreationDateVisible]="false"
+        class="col-md-3 col-sm-4 col-xs-12"
+      ></ant-article-summary>
     </section>
     <!-- EXTRA ARTICLES -->
 
     <!-- EXTRA ARTICLES MOBILE -->
-    <ant-experience-article-card *ngIf="isMobile()" [articles$]="articlesMobile$.asObservable()" [totalItems]="amountOfArticles"
-      [isMobile]="true"></ant-experience-article-card>
+    <ant-experience-article-card
+      *ngIf="isMobile() && (articlesMobile$ | async)?.length > 0"
+      [articles$]="articlesMobile$.asObservable()"
+      [totalItems]="amountOfArticles"
+      [isMobile]="true"
+    ></ant-experience-article-card>
     <!-- / EXTRA ARTICLES MOBILE -->
   </article>
 
-  <div *ngIf="!isMobile()" id="more-articles-btn-container" [ngClass]="{ 'hide-more-btn': isEndOfPage }">
+  <div
+    *ngIf="!isMobile()"
+    id="more-articles-btn-container"
+    [ngClass]="{ 'hide-more-btn': isEndOfPage }"
+  >
     <button class="btn" (click)="loadMoreArticles()">
-      <span translate> SEE_MORE</span>
+      <span translate>SEE_MORE</span>
     </button>
   </div>
 
-  <!--
-    <hav-outstanding-experiences></hav-outstanding-experiences> TODo: use this compoenent, but can't be imported in this module and the homeModule...
-  -->
+  <hav-outstanding-experiences
+    [isViewMoreVisible]="false"
+  ></hav-outstanding-experiences>
 </div>
